cloud/k8s/ingress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vibechat-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "vibechat-cert"
    kubernetes.io/ingress.global-static-ip-name: "vibechat-lb-ip"  
spec:
  rules:
    - host: vibechat.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client       
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway   
                port:
                  number: 80 
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
